Fixed padding for ios mobile. Learned about autoplay limitations on iOS

--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -17,6 +17,7 @@ body {
 }
 
 button {
+  padding: 0;
   background-color: $nord2;
   color: $nord6;
 
